- Add new privacy policy - Fix formatting on small screens - Add open-sans local

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -310,7 +310,7 @@ font-weight: bold;
 	background:#FAF6F1;
 	padding:0px;
 	border: solid 1px #161008;
-	z-index:1000;
+	z-index:2000;
 	display:none;
 	-webkit-box-shadow: 0px 0px 100px 50px rgba(255,250,240,0.8);
 	box-shadow: 0px 0px 100px 50px rgba(255,250,240,0.8);
@@ -464,6 +464,7 @@ a.close{
 	list-style:none;
 	margin: 0px;
 	padding: 0px;
+	padding-bottom: 20px;
 }
 
 .panel .linearlist li, .popup .linearlist li{
@@ -603,6 +604,11 @@ a.close{
 	overflow: hidden;
 	float: right;
 	border: solid 1px #aaa;
+}
+
+#checkin a#setpic img{
+	width: 100%;
+	height: 100%;
 }
 
 #checkin #btnCheckin{
@@ -1102,10 +1108,21 @@ a.close{
 #footer{
 	position: absolute;
 	float:right;
-	width: auto;
+	width: 100%;
 	right: 0px;
 	bottom: 0px;
 	overflow: hidden;
+}
+
+#footer .policy{
+	background: rgba(255,255,255,0.8);
+	font-size: 12px;
+	color: #333;
+	line-height: 12px;
+	margin-left: 10px;
+	padding: 3px 10px;
+	font-weight: bold;
+	float: left;
 }
 
 #footer a.gz {
@@ -1121,7 +1138,7 @@ a.close{
 	overflow: hidden;
 	margin: 0px 0px;
 	display: block;
-	float: left;
+	float: right;
 }
 
 #footer a.gz .badge {
@@ -1267,7 +1284,7 @@ a.close span {
 		height: 75px;
 	}
 	.panel .tabs li a {
-		font-size: 20px;
+		font-size: 18px;
 	}
 	.panel .linearlist li, .popup .linearlist li {
 		font-size: 20px;
@@ -1291,13 +1308,38 @@ a.close span {
 		line-height: 45px;
 	}
 	
+	#info #aboutbox p {
+	font-size: 18px;
+	}
+	
 	#prize .checkins li{
 		min-height: 65px;
+	}
+	
+	#locationoptions .vcard p {
+		font-size: 20px;
+	}
+	
+	#locationoptions .button {
+		font-size: 22px;
 	}
 	
 	#location .content .vcard p {
 		margin: 0px 5px;
 		font-size: 12px;
+	}
+	
+	#userlocation .locmessage {
+	font-size: 18px;
+	}
+	
+	#userlocation #loctext {
+	width: 80%;
+	}
+	
+	#userprofile #ckprofile .checkins .comment, #comments .checkins .comment {
+	float: left;
+	width: 65%;
 	}
 	
 	#checkin #msgAnonymous {
@@ -1336,21 +1378,22 @@ a.close span {
 	font-size: 14px;
 	}
 	
+	#footer{
+		height: 23px;
+	}
+	
 	#footer a.gz {
-		height: 22px;
-		line-height: 18px;
-		font-size: 18px;
-		padding: 5px 10px 5px 0px;
+		line-height: 14px;
+font-size: 12px;
+padding: 0px 10px 0px 0px;
 	}
 	
 	#footer a.gz .badge {
-		width: 22px;
-		height: 22px;
-		font-size: 22px;
-		margin-left: 0px;
-		margin-right: 0px;
-		line-height: 20px;
-		padding: 4px 15px;
+		font-size: 15px;
+margin-left: 0px;
+margin-right: 0px;
+line-height: 23px;
+padding: 5px 11px;
 	}
 	
 
